# libkdumpfile

./: Makefile.am  NEWS  README.md  attributes.md  configure.ac
examples/: dumpattr.c
include/libkdumpfile/: kdumpfile.h.in
m4/: tools.m4
python/: kdumpfile.c
src/addrxlat/: Makefile.am  x86_64.c
src/kdumpfile/: Makefile.am  aarch64.c  arm.c  attr.c  bitmap.c  blob.c  diskdump.c  ia32.c  kdumpfile-priv.h  libkdumpfile.map  notes.c  open.c  ppc64.c  riscv64.c  (+7 more)
tests/: Makefile.am  attriter.c  diskdump-basic-vmcoreinfo  diskdump-flat-vmcoreinfo  dump-pgt.py  elf-prstatus-mod-x86_64.c  elf-qemu-cpustate-wrongver  elf-qemu-cpustate-wrongver.data  elf-qemu-cpustate-x86_64  elf-qemu-cpustate-x86_64.data  fdset.c  subattr.c  typed-attr.c  xlat-linux-x86_64-2.6.27-cr3-xen.data  xlat-linux-x86_64-2.6.27-nover.data  xlat-linux-x86_64-2.6.31-cr3.data  xlat-linux-x86_64-2.6.31-cr3.expect  xlat-linux-x86_64-2.6.31-cr3.sym  xlat-linux-x86_64-2.6.31-kvaddr.data  xlat-linux-x86_64-2.6.31-nover-reloc.data  xlat-linux-x86_64-2.6.31-nover-xen.data  xlat-linux-x86_64-2.6.31-nover.data  xlat-linux-x86_64-4.13-nover.data  xlat-linux-x86_64-4.13-nover.expect  xlat-linux-x86_64-6.11-pti-ldt  xlat-linux-x86_64-6.11-pti-ldt.data  xlat-linux-x86_64-6.11-pti-ldt.expect  xlat-linux-x86_64-6.11-pti-ldt.sym  xlat-linux-x86_64-6.11-pti-user  xlat-linux-x86_64-6.11-pti-user-ver  xlat-linux-x86_64-6.11-pti-user.data  xlat-linux-x86_64-6.11-pti-user.sym  xlat-os-common
tools/: Makefile.am
tools/kdumpid/: .gitignore  Makefile.am  kdumpid.h  main.c  ppc.c  ppc64.c  s390.c  search.c  util.c
